<resources>
    <string name="app_name">GastoVIagem</string>
    <string name="distancia">Distância</string>
    <string name="total_de_quilometros">total de quilômetros</string>
    <string name="preço">Preço</string>
    <string name="preço_do_combustivel">preço do combustivel</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">KMS por litro</string>
    <string name="calcular">CALCULAR</string>
    <string name="seu_gasto_total_ser_de">SEU GASTO TOTAL SERÁ DE:</string>
</resources>